# play

./: .gitignore  .gitmodules  .travis.yml  20180118-institution-rollback.sql  Blaze-ByteString-Builder-Html-Word.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Control-Invert.html  Data-ByteString-Builder-Escape.html  Databrary-Action-Form.html  Databrary-Action-Response.html  Databrary-Action-Run.html  Databrary-Action-Types.html  Databrary-Action.html  Databrary-Context.html  Databrary-Controller-Activity.html  Databrary-Controller-Angular.html  Databrary-Controller-Asset.html  Databrary-Controller-AssetSegment.html  Databrary-Controller-CSV.html  Databrary-Controller-Container.html  Databrary-Controller-Excerpt.html  Databrary-Controller-Form.html  Databrary-Controller-Ingest.html  Databrary-Controller-Login.html  Databrary-Controller-Metric.html  Databrary-Controller-Notification.html  Databrary-Controller-Party.html  Databrary-Controller-Paths.html  Databrary-Controller-Permission.html  Databrary-Controller-Record.html  Databrary-Controller-Search.html  Databrary-Controller-Slot.html  Databrary-Controller-Token.html  Databrary-Controller-Transcode.html  Databrary-Controller-Upload.html  Databrary-Controller-Volume.html  Databrary-Controller-Zip.html  Databrary-EZID-API.html  Databrary-EZID-Service.html  (+418 more)
Databrary/: Files.hs  FilesHash.hs  JSON.hs  JSONHtml.hs  JSONQuery.hs  Main.hs  Ops.hs  Routes.hs  String.hs  Web.hs
app-databrary/: Main.hs
app-databrary-load-fake/: Main.hs
app-generate/: generate.hs
backend/: databrary.cabal  databrary.conf  transcode  transctl.sh
backend/config/: email
backend/schema/: 00.sql  20180523-access-sharefull-contd.sql
backend/src/: Context.hs  HTTP.hs  StringUtil.hs  Warp.hs
backend/src/Action/: Run.hs  Servant.hs
backend/src/Blaze/ByteString/Builder/Html/: Word.hs
backend/src/Controller/: Angular.hs-boot  Authorize.hs  Citation.hs  Format.hs  Funding.hs  IdSet.hs  Ingest.hs  Ingest.hs-boot  Login.hs  Login.hs-boot  Metric.hs  Notification.hs  Party.hs-boot  Periodic.hs  Periodic.hs-boot  Register.hs-boot  Root.hs  Slot.hs  Transcode.hs  Volume.hs  VolumeState.hs  Web.hs-boot  Zip.hs
backend/src/Data/ByteString/Builder/: Escape.hs
backend/src/Data/Csv/: Contrib.hs
backend/src/EZID/: DataCite.hs
backend/src/HTTP/: Client.hs  File.hs  Form.hs  Request.hs
backend/src/HTTP/Form/: Deform.hs  View.hs
backend/src/Model/: Age.hs  Asset.hs  AssetRevision.hs  AssetSegment.hs  AssetSlot.hs  Authorize.hs  Citation.hs  Comment.hs  Excerpt.hs  GeoNames.hs  Id.hs  Identity.hs  Ingest.hs  Kind.hs  Measure.hs  Paginate.hs  Periodic.hs  Release.hs  Segment.hs  Stats.hs  Time.hs  Transcode.hs  URL.hs  VolumeAccess.hs  VolumeMetric.hs
backend/src/Model/Activity/: SQL.hs  Types.hs
backend/src/Model/AssetRevision/: Types.hs
backend/src/Model/AssetSegment/: Types.hs
backend/src/Model/AssetSlot/: SQL.hs
backend/src/Model/Authorize/: SQL.hs
backend/src/Model/Citation/: CrossRef.hs  Types.hs
backend/src/Model/Container/: Types.hs
backend/src/Model/Excerpt/: SQL.hs
backend/src/Model/Funding/: FundRef.hs
backend/src/Model/Id/: Types.hs
backend/src/Model/Identity/: Types.hs
backend/src/Model/Notification/: Notice.hs  SQL.hs
backend/src/Model/Permission/: SQL.hs
backend/src/Model/Record/: SQL.hs
backend/src/Model/RecordSlot/: SQL.hs
backend/src/Model/Release/: SQL.hs  Types.hs
backend/src/Model/Slot/: SQL.hs
backend/src/Model/Tag/: Types.hs
backend/src/Model/Token/: Types.hs
backend/src/Model/Transcode/: Types.hs
backend/src/Model/Volume/: SQL.hs
backend/src/Service/: Crypto.hs  DB.hs  Log.hs  Types.hs
backend/src/Solr/: Search.hs  Service.hs
backend/src/Static/: Fillin.hs
backend/src/Store/: AV.hsc  AssetSegment.hs  Filename.hs  Probe.hs  Temp.hs  Transcode.hs  Transcoder.hs
backend/src/View/: Angular.hs  Authorize.hs  Email.hs  Html.hs  Ingest.hs  Login.hs  Paginate.hs  Party.hs  Template.hs  Token.hs  Transcode.hs
backend/src/Web/: All.hs  Cache.hs  JSHint.hs  Templates.hs
backend/test/: HasTest.hs  ModelTest.hs  OpsTest.hs  TestHarness.hs
backend/test/Action/: RequestTest.hs
backend/test/Controller/: IngestTest.hs
backend/test/Data/Csv/: ContribTest.hs
backend/test/EZID/: ANVLTest.hs
backend/test/HTTP/: RequestTest.hs
backend/test/Model/: AssetTest.hs  AuditTest.hs  AuthorizeTest.hs  FormatTest.hs  IdentityTest.hs  IngestTest.hs  KindTest.hs  ORCIDTest.hs  PaginateTest.hs  PartyTest.hs  PermissionTest.hs  URLTest.hs  VolumeAccessTest.hs  VolumeTest.hs
backend/test/Model/Audit/: TypesTest.hs
backend/test/Model/Category/: TypesTest.hs
backend/test/Model/Comment/: TypesTest.hs
backend/test/Model/Metric/: TypesTest.hs
backend/test/Model/Permission/: TypesTest.hs
backend/test/Model/Stats/: TypesTest.hs
backend/test/Model/Tag/: TypesTest.hs
backend/test/Model/Token/: TypesTest.hs
backend/test/Service/: MailTest.hs  PasswdTest.hs
backend/test/Store/: AVTest.hs  ConfigTest.hs
config/: email.sample-gsuiterelay  email.sample-mailtrap
coverage/: Databrary.MainTest.hs.html  Databrary.Model.EnumTest.hs.html  DatabraryMainTest.hs.html  Paths_databrary.hs.html  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
coverage-comparison/: index.html
databrary_logs/: solr_log
devops/: remove-deploy-user.sh
docs/: README.md  Restart-the-production-service.md  Running-Tests.md  Smoketest-and-Prod--Build-and-Run.md  System-Requirements.md  ToC.md  Update-Github-Pages.md  massage.sh
haddocks/: API.html  Action-Form.html  Action-Request.html  Action-Response.html  Action-Route.html  Action-Run.html  Action-Servant.html  Action-Types.html  Action.html  Blaze-ByteString-Builder-Html-Word.html  Context.html  Control-Invert.html  Controller-Activity.html  Controller-Angular.html  Controller-Asset.html  Controller-AssetSegment.html  Controller-Authorize.html  Controller-CSV.html  Controller-Citation.html  Controller-Comment.html  Controller-Container.html  Controller-Excerpt.html  Controller-Form.html  Controller-Format.html  Controller-Funding.html  (+930 more)
(+2708 files in other folders)
