Name:                databrary
Version:             1
Synopsis:            Databrary
Description:         Video data sharing library designed for human subjects research (http://databrary.org) in Haskell.
License:             GPL-3
License-file:        COPYING
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
Stability:           Provisional
Category:            Web
Tested-with:         GHC == 7.10.3
Build-type:          Simple
Cabal-version:       >=1.22

Source-Repository head
  Type:	git
  Location: https://github.com/databrary/databrary

Flag devel
  description: Enable development mode
  default: False
  manual: True

Flag sandbox
  description: Enable sandbox/demo mode
  default: False
  manual: True

Executable databrary
  main-is: Databrary/Main.hs
  other-modules: Databrary.Store.AV
  c-sources: Databrary/Store/avFrame.c

  build-depends:
    base >= 4.8.2.0,
    bytestring >= 0.10,
    containers >= 0.5.6.2,
    array >= 0.5.1.0,
    transformers >= 0.4.3.0,
    transformers-base >= 0.4.4,
    mtl >= 2.2.1,
    monad-control >= 1,
    lifted-base >= 0.2.3.6,
    template-haskell >= 2.10.0.0,
    th-lift >= 0.7.6,
    th-lift-instances >= 0.1.7,
    time >= 1.5.0.1,
    unix >= 2.7.1.0,
    filepath >= 1.4.0.0,
    posix-paths >= 0.2.1.0,
    directory >= 1.2.2.0,
    process >= 1.2.3.0,
    data-default-class >= 0.0.1,
    text >= 1.2.2.1,
    utf8-string >= 1.0.1.1,
    hashable >= 1.2.1,
    unordered-containers >= 0.2.7.0,
    parsec >= 3,
    attoparsec >= 0.13.0.1,
    network >= 2.6.2.1,
    network-uri >= 2.6.1.0,
    http-types >= 0.9,
    wai >= 3.2.1,
    wai-extra >= 3.0.15.1,
    warp >= 3.2.6,
    warp-tls >= 3.2.1,
    case-insensitive >= 1.2.0.6,
    aeson >= 0.11.1.4,
    vector >= 0.11.0.0,
    cookie >= 0.4.1.6,
    resource-pool >= 0.2.3.2,
    scientific >= 0.3.4.6,
    postgresql-typed >= 0.4.5,
    postgresql-simple >= 0.5.3.0,
    memory >= 0.8,
    cryptonite >= 0.15,
    resourcet >= 1.1.7.4,
    streaming-commons >= 0.1.15.2,
    -- blaze-builder >= 0.4,
    blaze-markup >= 0.8.0.0,
    blaze-html >= 0.9.0.1,
    regex-posix >= 0.95.2,
    bcrypt >= 0.0.9,
    http-client >= 0.4.27,
    http-client-tls >= 0.2.4,
    mime-mail >= 0.4.11,
    mime-types >= 0.1.0.6,
    fast-logger >= 2.4.6,
    digest >= 0.0.1.2,
    hjsonschema == 0.9.0.0,
    -- file-embed >= 0.0.9.1,
    aeson-better-errors > 0.9.0,
    xml >= 1.3.14,
    zlib >= 0.6.1.1,
    range-set-list >= 0.1.2.0,
    invertible >= 0.1.1,
    web-inv-route >= 0.1,
    smtp-mail >= 0.1.4.6,
    zip >= 0.1.3,
    conduit-combinators >= 1.1.1,
    binary >= 0.8.3.0
            
  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  if flag(devel)
    cpp-options: -DDEVEL
  else
    ghc-options: -with-rtsopts -N
  if flag(sandbox)
    cpp-options: -DSANDBOX

  pkgconfig-depends: libavformat, libswscale, libavcodec, libavutil
  extra-libraries: crack, crypto

Executable generate
  main-is: generate.hs

  build-depends:
    aeson >= 0.11.1.4,
    base >= 4.8.2.0,
    blaze-html >= 0.9.0.1,
    bytestring >= 0.10,
    cryptonite >= 0.15,
    directory >= 1.2.2.0,
    filepath >= 1.4.0.0,
    hashable >= 1.2.1,
    http-types >= 0.9,
    memory >= 0.8,
    mime-types >= 0.1.0.6,
    mtl >= 2.2.1,
    parsec >= 3,
    posix-paths >= 0.2.1.0,
    process >= 1.2.3.0,
    template-haskell >= 2.10.0.0,
    text >= 1.2.2.1,
    th-lift >= 0.7.6,
    time >= 1.5.0.1,
    transformers >= 0.4.3.0,
    transformers-base >= 0.4.4,
    unix >= 2.7.1.0,
    unordered-containers >= 0.2.7.0,
    vector >= 0.11.0.0,
    zlib >= 0.6.1.1

  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
  cpp-options: -DNODB

  if flag(devel)
    cpp-options: -DDEVEL
  else
    ghc-options: -with-rtsopts -N
  if flag(sandbox)
    cpp-options: -DSANDBOX
