Name:                databrary
Version:             1
Synopsis:            Databrary
Description:         Video data sharing library designed for human subjects research (http://databrary.org) in Haskell.
License:             AGPL-3.0
License-file:        LICENSE
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
Stability:           Provisional
Category:            Web
Tested-with:         GHC >= 7.10.3 && <= 8.0.2
Build-type:          Simple
Cabal-version:       >=1.22

data-files:
  messages.conf
  transcode
  transctl.sh
  volume.json

extra-source-files:
  -- FIXME: Previously this was in data-files, and the tests use
  -- 'getDataFileName' to access it. But it isn't a runtime data file, so it
  -- belongs here. The tests should refer to it directly. (The tests still
  -- work, however.)
  test/data/small.webm

Source-Repository head
  Type:	git
  Location: https://github.com/databrary/databrary

Flag devel
  description: Enable development mode
  default: False
  manual: True

Flag sandbox
  description: Enable sandbox/demo mode
  default: False
  manual: True

-- 1. Databrary uses the ffmpeg package, but doesn't actually use "libffmpeg",
-- which doesn't exist. This causes a poor interaction between Cabal and Nix. To
-- fix it, I present the following unbuildable component. It lets us use
-- cabal2nix's output without modification (together with pkgconfig-depends
-- below).
--
-- 2. We also depend on postgres as a build tool.
executable dummy-ffmpeg-referrer
  buildable: False
  extra-libraries: ffmpeg, postgresql95
  main-is: dummy-ffmpeg-referrer.hs

library
  hs-source-dirs: src
  -- FIXME: Lots of deprecated declarations in avFrame.h. Ignoring for now.
  cc-options: -Wno-deprecated-declarations
  c-sources: src/Store/avFrame.c
  ghc-options: -Wall -Wredundant-constraints -Wno-type-defaults
  exposed-modules:
    Solr.Search
    Solr.Tag
    Solr.Index
    Solr.Document
    JSON
    DatabraryMain
    Static.Fillin
    EZID.Volume
    EZID.DataCite
    EZID.API
    EZID.ANVL
    Model.Format
    Model.RecordSlot
    Model.Audit.Types
    Model.Audit.SQL
    Model.Volume
    Model.Access
    Model.Activity
    Model.Asset.Types
    Model.Asset.SQL
    Model.Excerpt.SQL
    Model.AssetSegment
    Model.Excerpt
    Model.VolumeMetric
    Model.Comment
    Model.Token
    Model.Slot
    Model.Category.Types
    Model.Authorize
    Model.RecordSlot.Types
    Model.RecordSlot.SQL
    Model.VolumeState.Types
    Model.Citation
    Model.Container
    Model.Transcode.Types
    Model.Paginate.SQL
    Model.AssetSlot
    Model.Segment
    Model.Metric
    Model.Container.Types
    Model.Container.SQL
    Model.Slot.Types
    Model.Slot.SQL
    Model.Permission
    Model.Kind
    Model.Metric.Types
    Model.Permission.Types
    Model.Permission.SQL
    Model.Party
    Model.Authorize.Types
    Model.Authorize.SQL
    Model.Notification.Notice
    Model.Notification.Notify
    Model.Notification.Types
    Model.Notification.SQL
    Model.Notification.Boot
    Model.Periodic
    Model.Funding
    Model.Release
    Model.Activity.Types
    Model.Activity.SQL
    Model.Token.Types
    Model.Notification
    Model.Funding.Types
    Model.Funding.FundRef
    Model.Comment.Types
    Model.Release.Types
    Model.Release.SQL
    Model.Asset
    Model.VolumeAccess.Types
    Model.VolumeAccess.SQL
    Model.Identity
    Model.Category
    Model.Party.Types
    Model.Party.SQL
    Model.Time
    Model.Measure
    Model.Id.Types
    Model.AssetSlot.Types
    Model.AssetSlot.SQL
    Model.PermissionUtil
    Model.ORCID
    Model.Audit
    Model.Record.Types
    Model.Record.SQL
    Model.SQL.Select
    Model.Paginate
    Model.Record
    Model.Citation.CrossRef
    Model.Citation.Types
    Model.Stats.Types
    Model.AssetRevision.Types
    Model.VolumeState
    Model.Ingest
    Model.GeoNames
    Model.Tag
    Model.VolumeAccess
    Model.URL
    Model.Identity.Types
    Model.Age
    Model.Tag.Types
    Model.Tag.SQL
    Model.SQL
    Model.Id
    Model.Stats
    Model.Format.Types
    Model.Transcode
    Model.AssetSegment.Types
    Model.AssetSegment.SQL
    Model.AssetRevision
    Model.Offset
    Model.Volume.Types
    Model.Volume.SQL
    Store.Upload
    Store.AssetSegment
    Store.Probe
    Store.CSV
    Store.Filename
    Store.Stage
    Store.Transcoder
    Store.Asset
    Store.Types
    Store.Temp
    Store.AV
    Store.Transcode
    Store.Config
    Service.Mail
    Service.Entropy
    Service.Periodic
    Service.Crypto
    Service.Messages
    Service.Notification
    Service.Types
    Service.Log
    Service.Passwd
    Ingest.JSON
    Controller.Format
    Controller.Upload
    Controller.Volume
    Controller.Activity
    Controller.AssetSegment
    Controller.Excerpt
    Controller.Comment
    Controller.Token
    Controller.Slot
    Controller.Web
    Controller.Authorize
    Controller.Citation
    Controller.Container
    Controller.Metric
    Controller.CSV
    Controller.Permission
    Controller.Party
    Controller.Periodic
    Controller.Funding
    Controller.Login
    Controller.Register
    Controller.Zip
    Controller.Notification
    Controller.Asset
    Controller.Root
    Controller.Angular
    Controller.Search
    Controller.IdSet
    Controller.Record
    Controller.VolumeState
    Controller.Ingest
    Controller.Tag
    Controller.VolumeAccess
    Controller.Transcode
    -- for testing
    Action.Request
    Blaze.ByteString.Builder.Html.Word
    Context
    Control.Invert
    Controller.Form
    Data.ByteString.Builder.Escape
    Data.Csv.Contrib
    Data.RangeSet.Parse
    EZID.Service
    Files
    Has
    HTTP.Cookie
    HTTP.Form.Deform
    HTTP.Client
    HTTP.Request
    Ingest.Service
    Model.Enum
    Ops
    Service.DB
    Service.Init
    Solr.Service
    Static.Service
    Store.Service
    StringUtil
    View.Html
    Web.Types
  other-modules:
    Paths_databrary
    Action
    Action.Form
    Action.Run
    Action.Types
    Action.Route
    Action.Response
    Action.Servant
    API
    Controller.Paths
    HTTP
    HTTP.File
    HTTP.Form
    HTTP.Path.Parser
    HTTP.Method.Map
    HTTP.Form.Data
    HTTP.Form.Errors
    HTTP.Form.View
    HTTP.Parse
    HTTP.Route
    Ingest.Action
    Routes.JS
    Routes
    View.Format
    View.Volume
    View.Token
    View.Authorize
    View.Container
    View.Form
    View.Error
    View.Party
    View.Periodic
    View.Login
    View.Register
    View.Email
    View.Template
    View.Zip
    View.Notification
    View.Root
    View.Angular
    View.Paginate
    View.Ingest
    View.Transcode
    View.VolumeAccess
    Warp
    Web
    Web.Service
    Web.Routes
    Web.Cache
    Web.JSHint
    Web.Uglify
    Web.Generate
    Web.GZip
    Web.Libs
    Web.Messages
    Web.Coffee
    Web.Constants
    Web.Files
    Web.Rules
    Web.Templates
    Web.Info
    Web.All
    Web.Stylus

  autogen-modules: Paths_databrary

  build-depends:
    base >= 4.8.2.0,
    bytestring >= 0.10,
    casing >= 0.1.2.0,
    cassava >= 0.4.5.1,
    containers >= 0.5.6.2,
    either >= 4.4.1.1,
    array >= 0.5.1.0,
    transformers >= 0.4.3.0,
    transformers-base >= 0.4.4,
    mtl >= 2.2.1,
    monad-control >= 1,
    lifted-base >= 0.2.3.6,
    template-haskell >= 2.10.0.0,
    th-lift >= 0.7.6,
    th-lift-instances >= 0.1.7,
    time >= 1.5.0.1,
    unix >= 2.7.1.0,
    filepath >= 1.4.0.0,
    posix-paths >= 0.2.1.0,
    directory >= 1.2.2.0,
    process >= 1.2.3.0,
    data-default-class >= 0.0.1,
    text >= 1.2.2.1,
    utf8-string >= 1.0.1.1,
    hashable >= 1.2.1,
    unordered-containers >= 0.2.7.0,
    parsec >= 3,
    attoparsec >= 0.13.0.1,
    network >= 2.6.2.1,
    network-uri >= 2.6.1.0,
    http-types >= 0.9,
    wai >= 3.2.1,
    wai-extra >= 3.0.15.1,
    warp >= 3.2.6,
    warp-tls >= 3.2.1,
    case-insensitive >= 1.2.0.6,
    aeson >= 0.11.1.4,
    vector >= 0.11.0.0,
    cookie >= 0.4.1.6,
    resource-pool >= 0.2.3.2,
    scientific >= 0.3.4.6,
    postgresql-typed >= 0.4.5,
    postgresql-simple >= 0.5.3.0,
    memory >= 0.8,
    cryptonite >= 0.15,
    resourcet >= 1.1.7.4,
    streaming-commons >= 0.1.15.2,
    -- blaze-builder >= 0.4,
    blaze-markup >= 0.8.0.0,
    blaze-html >= 0.9.0.1,
    regex-posix >= 0.95.2,
    bcrypt >= 0.0.9,
    http-client >= 0.4.27,
    http-client-tls >= 0.2.4,
    mime-mail >= 0.4.11,
    mime-types >= 0.1.0.6,
    fast-logger >= 2.4.6,
    hjsonschema == 0.9.0.0,
    -- file-embed >= 0.0.9.1,
    aeson-better-errors > 0.9.0,
    xml >= 1.3.14,
    zlib >= 0.6.1.1,
    range-set-list >= 0.1.2.0,
    invertible >= 0.1.1,
    web-inv-route >= 0.1,
    smtp-mail >= 0.1.4.6,
    zip >= 0.1.3,
    conduit-combinators >= 1.1.1,
    binary >= 0.8.3.0,
    path >= 0.5.13,
    path-io >= 1.2.2,
    wai-route >= 0.3.1.1,
    servant >= 0.11,
    servant-blaze >= 0.7 && < 0.8,
    servant-server >= 0.11,
    stringsearch >= 0.3.6.6
                
  pkgconfig-depends: libavformat

  default-language: Haskell2010
  default-extensions:
    ConstraintKinds,
    FlexibleContexts,
    FlexibleInstances,
    LambdaCase,
    MultiParamTypeClasses,
    PatternGuards,
    ScopedTypeVariables

  if flag(devel)
    cpp-options: -DDEVEL
  if flag(sandbox)
    cpp-options: -DSANDBOX


Executable databrary
  hs-source-dirs: app-databrary
  main-is: Main.hs

  build-depends:
    databrary,
    base >= 4.8.2.0
                
  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall

  if flag(devel)
    cpp-options: -DDEVEL
  else
    ghc-options: -with-rtsopts -N
  if flag(sandbox)
    cpp-options: -DSANDBOX

  extra-libraries: crack
  pkgconfig-depends: libswscale, libavcodec, libavutil
Executable generate
  hs-source-dirs: app-generate, src
  main-is: generate.hs

  build-depends:
    aeson >= 0.11.1.4,
    base >= 4.8.2.0,
    blaze-html >= 0.9.0.1,
    bytestring >= 0.10,
    cryptonite >= 0.15,
    directory >= 1.2.2.0,
    either >= 4.4.1.1,
    filepath >= 1.4.0.0,
    hashable >= 1.2.1,
    http-types >= 0.9,
    memory >= 0.8,
    mime-types >= 0.1.0.6,
    mtl >= 2.2.1,
    parsec >= 3,
    posix-paths >= 0.2.1.0,
    process >= 1.2.3.0,
    template-haskell >= 2.10.0.0,
    text >= 1.2.2.1,
    th-lift >= 0.7.6,
    time >= 1.5.0.1,
    transformers >= 0.4.3.0,
    transformers-base >= 0.4.4,
    unix >= 2.7.1.0,
    unordered-containers >= 0.2.7.0,
    vector >= 0.11.0.0,
    zlib >= 0.6.1.1

  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall
  cpp-options: -DNODB

  if flag(devel)
    cpp-options: -DDEVEL
  else
    ghc-options: -with-rtsopts -N
  if flag(sandbox)
    cpp-options: -DSANDBOX

test-suite discovered
  type: exitcode-stdio-1.0
  main-is: Discovered.hs
  hs-source-dirs: test
  build-depends:
    databrary
    , aeson
    , array
    , attoparsec
    , base
    , blaze-html
    -- , blaze-markup
    , bytestring
    , containers
    , cookie
    , cryptonite
    , directory
    , filepath
    , hedgehog
    , hspec-expectations >= 0.8.2
    , http-client
    , http-types
    , mime-mail
    , mtl
    , network-uri
    , postgresql-typed
    , posix-paths
    , process
    , range-set-list
    , resourcet
    , tasty
    , tasty-discover
    , tasty-expected-failure
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , QuickCheck
    , transformers
    , text
    , time
    , unix
    , unordered-containers
    , vector
    , wai
  -- Ignore missing fields to use our 'TestContext' pattern
  ghc-options: -Wall -Wcompat -Wredundant-constraints -Wno-missing-fields
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings,
    MultiParamTypeClasses,
    FlexibleInstances
  extra-libraries: crack
  pkgconfig-depends: libswscale
  other-modules:

      Action.RequestTest
    , Controller.IngestTest
    , Controller.LoginTest
    , EZID.ANVLTest
    , FilesTest
    , HasTest
    , JSONTest
    , HTTP.CookieTest
    , HTTP.ClientTest
    , HTTP.Form.DeformTest
    , HTTP.RequestTest
    , ModelTest
    , Model.AgeTest
    , Model.AssetTest
    , Model.AssetSlot.TypesTest
    , Model.AssetSegment.TypesTest
    , Model.AuditTest
    , Model.Audit.TypesTest
    , Model.AuthorizeTest
    , Model.Category.TypesTest
    , Model.Citation.CrossRefTest
    , Model.Comment.TypesTest
    , Model.Container.TypesTest
    , Model.EnumTest
    , Model.Factories
    , Model.FormatTest
    , Model.FundingTest
    , Model.Funding.FundRefTest
    , Model.GeoNamesTest
    , Model.Id.TypesTest
    , Model.IdentityTest
    , Model.Identity.TypesTest
    , Model.IngestTest
    , Model.KindTest
    , Model.MetricTest
    , Model.Metric.TypesTest
    , Model.ORCIDTest
    , Model.OffsetTest
    , Model.PaginateTest
    , Model.PartyTest
    , Model.PermissionTest
    , Model.Permission.TypesTest
    , Model.RecordTest
    , Model.Record.TypesTest
    , Model.Release.TypesTest
    , Model.SegmentTest
    , Model.Slot.TypesTest
    , Model.Stats.TypesTest
    , Model.Tag.TypesTest
    , Model.TimeTest
    , Model.Token.TypesTest
    , Model.TypeOrphans
    , Model.URLTest
    , Model.VolumeTest
    , Model.VolumeAccessTest
    , OpsTest
    , Service.CryptoTest
    , Service.MailTest
    , Service.PasswdTest
    , Solr.DocumentTest
    , Store.AVTest
    , Store.ConfigTest
    , Store.FilenameTest
    , Store.ProbeTest
    , StringUtilTest
    , View.HtmlTest
    , Data.Csv.ContribTest
    , Data.RangeSet.ParseTest
    , TestHarness

-- vim: shiftwidth=2
